--- a/src/static/css/clientes.css
+++ b/src/static/css/clientes.css
@@ -30,12 +30,12 @@
   }
   
   .nav-scroller .nav-link:hover {
-    color: #343a40;
+    color: #191C1F;
   }
   
   .nav-scroller .active {
     font-weight: 500;
-    color: #55a27a;    
+    color: #55a27a;  
   }
   
   .bg-purple {
