--- a/src/templates/auth/clientes_info.html
+++ b/src/templates/auth/clientes_info.html
@@ -5,21 +5,19 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/clientes.css') }}">
 {% endblock %}
 
-{% block title %} Clientes | Listar {% endblock %}
+{% block title %} Clientes | Perfil {% endblock %}
 
 {% block content %}
 <section class="content">
   <div>
     <div class="nav-scroller bg-body shadow-sm col-sm">
       <nav class="nav" aria-label="Secondary navigation">
-        <a class="nav-link active" href="clientes">Listar</a>
-        <a class="nav-link" href="clientes_add">Nuevo cliente</a>
-        <a class="nav-link" href="#">Gestión</a>
-     </nav>
+        <a class="nav-link" href="clientes">Regresar</a>
+        <a class="nav-link active" href="clientes_info">Perfil</a>
+        <a class="nav-link" href="clientes_edit">Editar</a>
+        <a class="nav-link" href="clientes_mascotas">Mascotas</a>
+      </nav>
     </div>
-    <form action="">
-      
-    </form>
   </div>
 </section>
 {% endblock %}
