--- a/src/templates/auth/mascotas_add.html
+++ b/src/templates/auth/mascotas_add.html
@@ -12,12 +12,15 @@
     <div>
         <div class="nav-scroller bg-body shadow-sm col-sm">
             <nav class="nav" aria-label="Secondary navigation">
-                <a class="nav-link active" href="mascotas">Listar</a>
-                <a class="nav-link" href="mascotas_add">Nueva mascota</a>
+                <a class="nav-link" href="mascotas">Listar</a>
+                <a class="nav-link active" href="mascotas_add">Nueva mascota</a>
                 <a class="nav-link" href="mascotas_razas">Razas</a>
                 <a class="nav-link" href="#">Gestión</a>
             </nav>
         </div>
     </div>
+    <form action="" method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/> 
+    </form>
 </section>
 {% endblock %}
