--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -4,7 +4,7 @@
 {% block title %} Login {% endblock %}
 <!-- Css login -->
 {% block customCSS %} 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 {% endblock %}
 
 {% block body %} 
