--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -38,7 +38,7 @@
     </div>
     <!-- boton submit -->
     <button id="login" class="w-100 btn btn-lg btn-primary" type="submit">Iniciar Sesión</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
+    <p class="mt-5 mb-3 text-muted">Vetnar Gestion veterinaria &copy; 2022</p>
   </form>
 </main> 
 {% endblock %}
