--- a/src/templates/auth/mascotas_edit.html
+++ b/src/templates/auth/mascotas_edit.html
@@ -57,7 +57,7 @@
                 <input type="text" class="form-control" name="raza" value="{{mascota.6}}">
                 <span class="input-group-text">Sexo</span>
                 <select class="form-select" aria-label="Default select example" name="sexo">
-                    <option selected value="{{mascota.7}}"></option>
+                    <option selected value="{{mascota.7}}">{{mascota.7}}</option>
                     <option value="Macho">Macho</option>
                     <option value="Hembra">Hembra</option>
                 </select>
@@ -65,20 +65,20 @@
             <div class="input-group input-group-sm mb-4">
                 <span class="input-group-text">Castrado</span>
                 <select class="form-select" aria-label="Default select example" name="castrado">
-                    <option selected value="{{mascota.8}}"></option>
+                    <option selected value="{{mascota.8}}">{{mascota.8}}</option>
                     <option value="Si">Si</option>
                     <option value="No">No</option>
                 </select>
                 <span class="input-group-text">Asegurado</span>
                 <select class="form-select" aria-label="Default select example" name="asegurado">
-                    <option selected value="{{mascota.9}}"></option>
+                    <option selected value="{{mascota.9}}">{{mascota.9}}</option>
                     <option value="Si">Si</option>
                     <option value="No">No</option>
                 </select>
             </div>
             <div class="input-group input-group-sm mb-3">
                 <span class="input-group-text">Notas</span>
-                <textarea class="form-control" name="notas" value="{{mascota.10}}"></textarea>
+                <textarea class="form-control" name="notas"">{{mascota.10}}</textarea>
             </div>
             <div class="input-group input-group-sm mb-3">
                 <a href="/mascotas" class="btn btn-danger btn-sm w-50">Cancelar</a>
